[JENKINS-54907] Specify JDK 11 options in Dockerfile and install necessary plugins.